...
final class WebViewViewController: UIViewController & WebViewViewControllerProtocol {
    // MARK: - Layout
    
    private var webView: WKWebView = {
        let view = WKWebView()
        view.backgroundColor = .white
        view.accessibilityIdentifier = "UnsplashWebView"
        view.translatesAutoresizingMaskIntoConstraints = false
        return view
    }()
    private var progressView: UIProgressView = {
        let view = UIProgressView()
        view.translatesAutoresizingMaskIntoConstraints = false
...
