...
        let view = UIView()
        view.translatesAutoresizingMaskIntoConstraints = false
        return view
    }()
    private lazy var likeButton: UIButton = {
        let button = UIButton(type: .custom)
        button.accessibilityIdentifier = "like button"
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setImage(UIImage(named: "likeNotActive"), for: .normal)
        button.addTarget(self, action: #selector(didTapLikeButton), for: .touchUpInside)
        return button
    }()
    private var dateLabel: UILabel = {
...
